infra/k8s/applications/ingress-commandes.yaml
# Routes Commandes : TOUTES protégées par JWT.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commandes-protected
  namespace: applications
  annotations:
    konghq.com/plugins: jwt,rate-limiting
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: commandes
                port:
                  number: 3004
